--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -148,7 +148,7 @@ dependencies:
           - zlib
       - output_types: [conda]
         packages:
-          - fmt==9.1.0
+          - fmt==11.0.2
   py_version:
     specific:
       - output_types: conda
@@ -162,8 +162,12 @@ dependencies:
             packages:
               - python=3.10
           - matrix:
+              py: "3.11"
             packages:
-              - python>=3.9,<3.11
+              - python=3.11
+          - matrix:
+            packages:
+              - python>=3.9,<3.12
   style_checks:
     common:
       - output_types: [conda, requirements]
